# YouRL

./: .gitignore  README.md
backend/: README.md  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 745e8ce0699f_create_users_and_urls_tables.py
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py
backend/app/modules/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/urls/: models.py
